# Doom

./: .gitignore  CMakeLists.txt  build.sh
src/: main.cpp  typedefs.h  typedefs.hpp
